@@ -2,6 +2,11 @@ CHANGELOG
 
 When		Who		What
 ======================================================================================
+2017-04-20	Richard Forth   Closes #183 , Added skip checks for the following:
+				--skip-maxclients
+				--skip-php-fatal
+				--skip-updates
+				See --help for more information.
 2017-04-04	Richard Forth   Added 'Red Hat Enterprise Linux Server' to new
 				list of supported OSes. Fixes #179. Bug. 
 2017-04-02	Richard Forth   Added code to detect older EOL OS versions and abort.
